--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.datasource.platform=all
 spring.datasource.sql-script-encoding=utf-8
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://192.168.7.102/youtube?autoReconnect=true&amp;useUnicode=true&amp;charaterEncoding=utf-8
-spring.datasource.url=jdbc:mariadb://172.20.0.106:3306/dreamsearch?autoReconnect=true
+spring.datasource.url=jdbc:mariadb://localhost:3074/dreamsearch?autoReconnect=true
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
-spring.datasource.username=swmin
+# siwan
+spring.datasource.username=root
 spring.datasource.password=ajskdl0515@
 
 spring.cache.ehcache.config=classpath:ehcache.xml
